--- a/server/composer.json
+++ b/server/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "league/fractal": "^0.20.1",
         "tymon/jwt-auth": "*"
     },
     "require-dev": {
